# BradOS

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TERMUX.md  brados-sec.service  brados.py  brados_apps.py  brados_bpkg.py  brados_brash.py  brados_drivers.py  brados_gui.py  brados_kernel.py  brados_kernel_core.py  brados_mail_server.py  brados_mesh.py  brados_music.py  brados_policy.yaml  brados_process.py  brados_security.py  brados_shell.py  brados_system.py  brados_test.py  brados_vfs.py  pyproject.toml  requirements-termux.txt
.github/workflows/: test.yml
scripts/: demo_60s.py  install-service.sh  termux-setup.sh  uninstall-service.sh
