[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "brados"
version = "3.0.0"
description = "The only terminal OS that actually does security"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["terminal", "os", "desktop", "security", "tui"]
authors = [{name = "Architect Brad", email = "architect@brados.dev"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
    "Topic :: Security",
    "Topic :: System :: Operating System",
]

dependencies = ["textual>=8.0.0", "mutagen"]

[project.optional-dependencies]
full = ["psutil", "requests", "cryptography", "pyyaml"]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as an asyncio coroutine test"]

[project.urls]
repository = "https://github.com/Architect-Brad/BradOS"
homepage = "https://github.com/Architect-Brad/BradOS"

[project.scripts]
brados = "brados:run_shell"

[tool.setuptools]
py-modules = [
    "brados", "brados_apps", "brados_bpkg", "brados_brash",
    "brados_drivers", "brados_gui", "brados_kernel", "brados_kernel_core",
    "brados_mail_server", "brados_mesh", "brados_music", "brados_process",
    "brados_security", "brados_shell", "brados_system", "brados_test", "brados_vfs",
]
